--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "themes/hugo-theme-console"]
 	path = themes/hugo-theme-console
 	url = https://github.com/mrmierzejewski/hugo-theme-console.git
+[submodule "MyPortFolio"]
+	path = public
+	url = https://github.com/CSaratakij/MyPortFolio.git
