--- a/config.toml
+++ b/config.toml
@@ -14,6 +14,7 @@ defaultContentLanguage = "en"  # For HTML page, now support: en, zh-hans, zh-han
 
 summaryLength = 100 # Custom summary length, add <!--more--> in post file to custom split point
 paginate = 13
+publishDir = "MyPortFolio"
 
 # googleAnalytics = "UA-000000000-0" # Set your Google Analytics UA here
 
